--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   # Aplicación FastAPI
   app:
@@ -16,7 +14,7 @@ services:
     volumes:
       - ./my_bertopic_modelv07:/app/my_bertopic_modelv07:ro
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8000/docs"]
+      test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
       interval: 30s
       timeout: 10s
       retries: 3
